[tool.poetry]
name = "kvdb"
version = "0.1.0"
description = "A simple key value pair implementation in python"
authors = ["Subham Singh <subham.singh@hackerearth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"
ruff = "^0.1.6"
portalocker = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
